<resources>
    <string name="app_name">AniLibria</string>

    <string name="fragment_title_releases">Релизы</string>
    <string name="fragment_title_news">Новости</string>
    <string name="fragment_title_videos">Видео</string>
    <string name="fragment_title_blogs">Блоги</string>
    <string name="fragment_title_other">Прочее</string>
    <string name="fragment_title_release">Релиз</string>
    <string name="fragment_title_favorites">Избранное</string>
    <string name="fragment_title_youtube">YouTube</string>
    <string name="fragment_title_search">Поиск</string>

    <string name="download_torrent">Скачать торрент</string>
    <string name="watch_web">Веб-плеер</string>
    <string name="watch_all">Смотреть онлайн</string>
    <string name="item_donate">Понравилась озвучка?\nПоддержи проект :3</string>
    <string name="updater_download">Загрузить</string>
    <string name="auth_sign_with">Войти через</string>
    <string name="auth_patreon">Patreon</string>
    <string name="auth_vk">Вконтакте</string>
    <string name="or">или</string>
    <string name="auth_login">Логин или email</string>
    <string name="auth_password">Пароль</string>
    <string name="auth_2fa">Секретный код 2FA</string>
    <string name="auth_2fa_desc">Оставьте поле пустым, если вы не настроили двухфакторную аутентификацию</string>
    <string name="auth_signin">Войти</string>
    <string name="auth_skip">Пропустить</string>
    <string name="comments_header">Комментарии</string>
    <string name="comments_notify_text">Сделайте свайп влево, чтобы открыть комментарии</string>
    <string name="loading">Загрузка</string>
    <string name="episodes_header">Эпизоды</string>

    <string name="placeholder_title_nodata_base">Нет данных</string>
    <string name="placeholder_desc_nodata_base">Потяните вниз, чтобы обновить данные.</string>
    <string name="placeholder_desc_nodata_search">Сформируйте поисковой запрос иначе или потяните вниз, чтобы обновить данные.</string>
    <string name="placeholder_desc_nodata_favorites">Здесь будут отображаться ваши избранные релизы.</string>
    <string name="placeholder_desc_nodata_history">Здесь будет отображаться локальная история просмотра релизов.</string>
    <string name="placeholder_title_comments">Нет комментариев</string>
    <string name="placeholder_desc_comments">Стань первым ;)</string>
</resources>
